src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__query_history_picker_with_entries.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ - ▸ -                                                                                                                 not loaded | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                        ╭ Query History ──────────────────────────────────────────────────────────────────────────────────────────────────╮                        │
│                        │  type to filter                                                                                                 │                        │
│                        │▸ ✗ SELECT count(*) FROM users                                                                 Mar 13 12:00 UTC  │                        │
│                        │  ✓ INSERT INTO orders (user_id, total) VALUES (1, 100)                                        Mar 13 11:00 UTC  │                        │
│                        │  ✓ SELECT * FROM users WHERE id = 1                                                           Mar 13 10:00 UTC  │                        │
│                        │                                                                                                                 │────────────────────────┘
│                        │                                                                                                                 │────────────────────────┐
│                        │ Preview ────────────────────────────────────────────────────────────────────────────────────────────────────────│                        │
│                        │✗ Failed  │ Mar 13 12:00 UTC                                                                                     │                        │
│                        │                                                                                                                 │                        │
│                        │SELECT count(*) FROM users                                                                                       │                        │
│                        │                                                                                                                 │                        │
│                        ╰ 3 entries │ type to filter │ Enter: Select │ Esc: Close ────────────────────────────────────────────────────────╯                        │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
