src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__settings_overlay_clipboard_pending_native.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                            connected | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││(select a table)                                                                                                          │
│  public.comments                      ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                ╭ Settings ───────────────────────────────────────────────────────────────────────────────────────╮                                │
│                                │                  │                                                                              │                                │
│                                │    Appearance    │Copy method                                                                   │                                │
│                                │    Keymap        │                                                                              │                                │
│                                │    ER Diagram    │    Auto saved                                                                │                                │
│                                │  > Clipboard     │  > OS clipboard                                                              │                                │
│                                │                  │    Terminal (OSC 52)                                                         │                                │
│                                │                  │                                                                              │                                │
│                                │                  │Auto: terminal over SSH; otherwise OS, then terminal on failure.              │                                │
│                                │                  │OSC 52 requires terminal/tmux permission. Sending does not confirm copying.   │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │────────────────────────────────┘
│                                │                  │                                                                              │────────────────────────────────┐
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                ╰ Enter: Apply │ Tab/⇧Tab: Section │ Esc: Cancel ─────────────────────────────────────────────────╯                                │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
j/k/↑↓:Select
