src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__settings_overlay_er_diagram.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                            connected | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│> public.users                         │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  public.posts                         ││(select a table)                                                                                                          │
│  public.comments                      ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                ╭ Settings ───────────────────────────────────────────────────────────────────────────────────────╮                                │
│                                │                  │                                                                              │                                │
│                                │    Appearance    │ER Diagram                                                                    │                                │
│                                │    Keymap        │                                                                              │                                │
│                                │  > ER Diagram    │Browser                                                                       │                                │
│                                │    Clipboard     │                                                                              │                                │
│                                │                  │  > System default     saved                                                  │                                │
│                                │                  │    Google Chrome                                                             │                                │
│                                │                  │    Firefox                                                                   │                                │
│                                │                  │    Safari                                                                    │                                │
│                                │                  │    Microsoft Edge                                                            │                                │
│                                │                  │    Brave                                                                     │────────────────────────────────┘
│                                │                  │    Other: []                                                                 │────────────────────────────────┐
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                │                  │                                                                              │                                │
│                                ╰ Enter: Apply │ Tab/⇧Tab: Section │ Esc: Cancel ─────────────────────────────────────────────────╯                                │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
j/k/↑↓:Select
